hphp/hack/test/typecheck/legacy_initializer.php.like_types.exp
File "legacy_initializer.php", line 22, characters 7-29:
Please add a type hint (Naming[2035])
File "legacy_initializer.php", line 22, characters 7-29:
Please add a type hint `const SomeType gconstWithoutHintNested` (Naming[2001])
File "legacy_initializer.php", line 4, characters 37-77:
Some elements in this collection are incompatible (Typing[4110])
  File "legacy_initializer.php", line 4, characters 13-20:
  Expected `vec<int>`
  File "stdlib/builtins_misc.hhi", line 15, characters 66-66:
  But got `dynamic` because it is an unenforceable type
File "legacy_initializer.php", line 8, characters 46-86:
Some elements in this collection are incompatible (Typing[4110])
  File "legacy_initializer.php", line 8, characters 21-28:
  Expected `vec<int>`
  File "stdlib/builtins_misc.hhi", line 15, characters 66-66:
  But got `dynamic` because it is an unenforceable type
File "legacy_initializer.php", line 12, characters 38-78:
Some elements in this collection are incompatible (Typing[4110])
  File "legacy_initializer.php", line 12, characters 14-21:
  Expected `vec<int>`
  File "stdlib/builtins_misc.hhi", line 15, characters 66-66:
  But got `dynamic` because it is an unenforceable type
File "legacy_initializer.php", line 18, characters 36-72:
Some elements in this collection are incompatible (Typing[4110])
  File "legacy_initializer.php", line 18, characters 11-18:
  Expected `vec<int>`
  File "stdlib/builtins_misc.hhi", line 15, characters 66-66:
  But got `dynamic` because it is an unenforceable type
